<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_operation"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:text="@string/operation"
                android:textSize="64sp"
                />

            <TextView
                android:id="@+id/txt_result"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:text="@string/result"
                android:textSize="64sp"
                />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <Button
                        android:id="@+id/bt_AC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_AC"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_delete"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_modulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_modulo"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_divide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_divide"
                        android:textSize="32sp"
                        />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <Button
                        android:id="@+id/bt_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_7"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_8"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_9"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_multiply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_multiply"
                        android:textSize="32sp"
                        />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <Button
                        android:id="@+id/bt_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_4"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_5"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_6"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_minus"
                        android:textSize="32sp"
                        />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <Button
                        android:id="@+id/bt_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_1"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_2"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_3"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_plus"
                        android:textSize="32sp"
                        />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <Button
                        android:id="@+id/bt_negative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_negative"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_0"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_dot"
                        android:textSize="32sp"
                        />

                    <Button
                        android:id="@+id/bt_equal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/bt_equal"
                        android:textSize="32sp"
                        />
                </LinearLayout>
            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>